test/trivial/dinan/bad_index.good
bad_index.chpl:1: error: invalid index expression
