test/trivial/dinan/bad_index.chpl
for [i, j] in (1..5, 2..6) do writeln("busted");
